k8s/auth-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: auth
spec:
  selector:
    app.kubernetes.io/name: auth-service
  ports:
  - name: http
    protocol: TCP
    port: 8001
    targetPort: 8001
